Permet d'avoir la liste d'application d'un utilisateur
